2004-11-22  Bart Veer  <bartv@ecoscentric.com>

	* src/devs_flash_atmel_dataflash_flash_dev_funs.c (df_flash_init):
	Rename cyg_block_info to cyg_flash_block_info

2004-11-21  Bart Veer  <bartv@ecoscentric.com>

	* cdl/devs_flash_atmel_dataflash.cdl: CYGHWR_IO_FLASH_DEVICE_V2 is
	now implicit

2004-11-20  Bart Veer  <bartv@ecoscentric.com>

	* cdl/devs_flash_atmel_dataflash.cdl: data flash requires indirect
	read support in the main flash code.

2004-10-07  Savin Zlobec  <savin@elatec.si> 

        * include/dataflash.h:
        * src/devs_flash_atmel_dataflash.c:
        Changed the API to be more consistent, included error
        reporting and added blocking/non blocking mode of operation.
        * src/devs_flash_atmel_dataflash_flash_dev_funs.c:
        Synced with new API and set the block size to DataFlash's
        native page size.

2004-10-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/devs_flash_atmel_dataflash.cdl: Remove
	CYGSEM_IO_FLASH_READ_INDIRECT which only legacy drivers should use
	when they provide a flash_read_buf function. For V2 drivers
	providing a read function in the device structure is sufficient.

2004-09-07  Savin Zlobec  <savin@elatec.si> 

        * cdl/devs_flash_atmel_dataflash.cdl:
        * include/dataflash.h:
        * src/devs_flash_atmel_dataflash.c:  
        * src/devs_flash_atmel_dataflash_flash_dev_funs.c:
        Atmel DataFlash driver implementation.   	 


//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//